2011-02-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py (PhotoListStore._show_photo_cb): Added checking for
	  recursion depth.

2011-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py: Added support for double clicking on
	  Photo Source Treeview to open Photo Source Dialog.

2011-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photosource.py, gphotoframe.ui: Added icons on photo source ComboBox.

2011-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, photosource.py, treeview.py: Added icons on photo
	  source treeview.
	* liststore.py, plugins/base/base.py: Added delays for accessing API.

2011-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Added checking if the menu is pop-upped.
	* actor/trash.py: Added checking if the trash dialog is shown.
	* liststore.py, frame.py: Added checking if the mouse pointer is
	  on the photo frame.

2011-02-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/trash.py: Modified trash dialog messages.
	* plugins/shotwell.py: Added support for "Rejected" as "Remove
	from catalogue".  Dropped support for TombstoneTable.

2011-02-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/shotwell.py: Added checking for TombstoneTable.

2011-02-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/urlget.py, plugins/picasa.py: Code refactoring.

2011-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/haikyo.py: Added support for proxy.
	* utils/urlget.py: Fixed a bug.

2011-01-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.2 release.
	* preferences/plugin.py: Fixed a plugin icon size.

2011-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/info.py: Added a quotation for google map image title.

2011-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/*: Updated help documents, images and translations.
	  Thanks Cristian Marchi!

2011-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/iconimage.py: Fixed an icon scale bug.