@@ -1,5 +1,6 @@
 2011-02-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* photosource.py: Fixed a cursor lost problem.
 	* liststore.py (PhotoListStore._show_photo_cb): Added checking for
 	  recursion depth.
 
